samples/_failures_safe/1761453735_ce9055_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddd452ff.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_ddd452ff.c:168:38: error: missing terminating " character
  168 |         case TOKEN_SEMICOLON: return "SEMICOLON
      |                                      ^~~~~~~~~~
./samples/SAFE/__tmp_ddd452ff.c:168:9: error: expected expression at end of input
  168 |         case TOKEN_SEMICOLON: return "SEMICOLON
      |         ^~~~
./samples/SAFE/__tmp_ddd452ff.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ddd452ff.c:168:9: error: expected declaration or statement at end of input
